[package]
name = "fellegi-sunter-marc"
version = "0.1.0"
edition = "2024"

[dependencies]
# For statistical and machine learning operations
statrs = "0.13"
# For numerical computing
ndarray = "0.15"
# For linear algebra
linregress = "0.5"
marctk = "0.7.0"
strsim = "0.11.1"
serde = {version="1.0.228", features=["derive"]}
serde_json = "1.0.150"
stop-words = "0.10.0"
itertools = "0.15.0"
diacritics = "0.2.2"
regex = "1.1.1"
library_stdnums = "0.1.0"

[profile.profiling]
inherits = "release"
debug = true
